--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,56 +1,23 @@
-<app-shared-dashboard></app-shared-dashboard>
-<!--<div class="dashboard-container"> 
-
-
-  Contenido específico del Dashboard 
+<div class="dashboard-container">
+  <app-shared-dashboard></app-shared-dashboard>
   <div class="dashboard-content">
-    <div class="summary-cards">
-      <div class="card blue">
-        <h3>Total de Empleados</h3>
-        <p>177</p>
-      </div>
-      <div class="card teal">
-        <h3>Empleados a tiempo</h3>
-        <p>86.11%</p>
-      </div>
-      <div class="card green">
-        <h3>Hoy asistieron a tiempo</h3>
-        <p>110</p>
-      </div>
-      <div class="card yellow">
-        <h3>Hoy asistieron tarde</h3>
-        <p>13</p>
+    <div class="card">
+      <h2>Gráfico de Recursos</h2>
+      <div class="chart-container">
+        <canvas id="myPieChart" width="100" height="100"></canvas>
       </div>
     </div>
-
-    <div class="reports">
-      <div class="chart-container">
-        <h4>Informe de asistencia mensual</h4>
-        <canvas id="attendanceChart"></canvas>
+    <div class="card project-card">
+      <h3>Proyectos</h3>
+      <div class="project-info">
+        <img
+          src="assets/project-icon.png"
+          alt="Project Icon"
+          class="project-icon"
+        />
+        <p class="project-count">{{ projectsCount }}</p>
       </div>
-
-      <div class="table-container">
-        <h4>Informe de Asistencia</h4>
-        <table>
-          <thead>
-            <tr>
-              <th>Fecha</th>
-              <th>Nombre</th>
-              <th>Hora Entrada</th>
-              <th>Hora Salida</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Sep 28, 2024</td>
-              <td>Cynthia Oviedo Cjumo</td>
-              <td><span class="late">10:50 AM</span></td>
-              <td>12:00 PM</td>
-            </tr>
-            Agrega más filas aquí 
-          </tbody>
-        </table>
-      </div>
+      <p class="project-description">Cantidad total de proyectos en curso.</p>
     </div>
   </div>
-</div> -->
+</div>
