--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,12 +1,13 @@
 <div class="dashboard-container">
   <app-shared-dashboard></app-shared-dashboard>
   <div class="dashboard-content">
-    <div class="card">
+    <div class="card chart-card large-chart">
       <h2>Gráfico de Recursos</h2>
       <div class="chart-container">
         <canvas id="myPieChart" width="100" height="100"></canvas>
       </div>
     </div>
+
     <div class="card project-card">
       <h3>Proyectos</h3>
       <div class="project-info">
@@ -18,6 +19,33 @@
         <p class="project-count">{{ projectsCount }}</p>
       </div>
       <p class="project-description">Cantidad total de proyectos en curso.</p>
+    </div>
+
+    <div class="card project-card">
+      <h3>Proyectos Finalizados</h3>
+      <div class="project-info">
+        <img
+          src="assets/project-icon.png"
+          alt="Project Icon"
+          class="project-icon"
+        />
+        <p class="project-count">{{ projectsCount }}</p>
+      </div>
+      <p class="project-description">
+        Cantidad total de proyectos finalizados.
+      </p>
+    </div>
+
+    <div class="card summary-card">
+      <h3>Reporte de Eventos</h3>
+      <p>Reporte de los eventos.</p>
+    </div>
+
+    <div class="card full-width-card">
+      <h3>Gráfico de lineas</h3>
+      <div class="chart-container-line">
+        <canvas id="myLineChart"></canvas>
+      </div>
     </div>
   </div>
 </div>
