--- a/src/app/components/projects/project-modal-table/project-modal-table.component.html
+++ b/src/app/components/projects/project-modal-table/project-modal-table.component.html
@@ -24,19 +24,57 @@
           <td>{{ project.createdAt | date : "yyyy-MM-dd" }}</td>
           <td>{{ project.createdAt | date : "HH:mm:ss" }}</td>
           <td>
-            <button
-              (click)="startEditing(project.id)"
-              *ngIf="!isEditing(project.id)"
-            >
-              Editar
-            </button>
-            <button
-              (click)="saveChanges(project)"
-              *ngIf="isEditing(project.id)"
-            >
-              Guardar
-            </button>
-            <button (click)="deleteProject(project.id)">Eliminar</button>
+            <div class="action-buttons">
+              <button
+                (click)="startEditing(project.id)"
+                *ngIf="!isEditing(project.id)"
+                class="icon-btn"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  width="24"
+                  height="24"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <path
+                    d="M4 20h4l10.5 -10.5a2.828 2.828 0 1 0 -4 -4l-10.5 10.5v4"
+                  ></path>
+                  <path d="M13.5 6.5l4 4"></path>
+                </svg>
+              </button>
+              <button
+                (click)="saveChanges(project)"
+                *ngIf="isEditing(project.id)"
+                class="icon-btn"
+              >
+                Guardar
+              </button>
+              <button (click)="deleteProject(project.id)" class="icon-btn">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  width="24"
+                  height="24"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <path d="M4 7h16"></path>
+                  <path
+                    d="M5 7l1 12a2 2 0 0 0 2 2h8a2 2 0 0 0 2 -2l1 -12"
+                  ></path>
+                  <path d="M9 7v-3a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v3"></path>
+                  <path d="M10 12l4 4m0 -4l-4 4"></path>
+                </svg>
+              </button>
+            </div>
           </td>
         </tr>
       </tbody>
