--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -62,7 +62,7 @@
     <!-- Modal para agregar proyecto -->
     <app-project-modal
       *ngIf="isProjectModalOpen"
-      (close)="toggleProjectModal()"
+      (closeModal)="toggleProjectModal()"
       (projectAdded)="handleProjectAdded()"
     ></app-project-modal>
 
