--- a/src/app/components/shared-dashboard/shared-dashboard.component.html
+++ b/src/app/components/shared-dashboard/shared-dashboard.component.html
@@ -2,7 +2,7 @@
   <!-- Barra lateral -->
   <div class="barra-lateral bg-light">
     <div class="nombre-pagina">
-      <img src="assets/margarita.png" alt="Flor" class="logo-flor" />
+      <img src="assets/logo2.png" alt="Flor" class="logo-flor" />
       <span>MargaRed</span>
     </div>
 
