--- a/src/app/components/calendar/calendar-modal/calendar-modal.component.html
+++ b/src/app/components/calendar/calendar-modal/calendar-modal.component.html
@@ -15,7 +15,6 @@
     </button>
   </div>
 
-  <!-- Formulario de Evento -->
   <div *ngIf="isEventSelected">
     <div class="form-group">
       <label>Nombre del Evento</label>
@@ -28,37 +27,34 @@
 
     <div class="row mt-3">
       <div class="col-6">
-        <div class="form-group">
-          <label>Empleado</label>
-          <select [(ngModel)]="selectedEmployee" class="form-control">
-            <option value="">Selecciona un empleado</option>
-            <option *ngFor="let emp of employees" [value]="emp.id">
-              {{ emp.name }}
-            </option>
-          </select>
-        </div>
-
-        <div class="form-group">
-          <label>Maquinaria</label>
-          <select [(ngModel)]="selectedMachine" class="form-control">
-            <option value="">Selecciona una maquinaria</option>
-            <option *ngFor="let maq of machines" [value]="maq.id">
-              {{ maq.name }}
-            </option>
-          </select>
-        </div>
+        <label>Empleado</label>
+        <select [(ngModel)]="selectedEmployee" class="form-control">
+          <option value="">Selecciona un empleado</option>
+          <option *ngFor="let emp of employees" [value]="emp.id">
+            {{ emp.name }}
+          </option>
+        </select>
       </div>
 
       <div class="col-6">
-        <div class="form-group">
-          <label>Hora Inicio</label>
-          <input type="time" [(ngModel)]="horaInicio" class="form-control" />
-        </div>
+        <label>Maquinaria</label>
+        <select [(ngModel)]="selectedMachine" class="form-control">
+          <option value="">Selecciona una maquinaria</option>
+          <option *ngFor="let maq of machines" [value]="maq.id">
+            {{ maq.name }}
+          </option>
+        </select>
+      </div>
+    </div>
 
-        <div class="form-group">
-          <label>Hora Fin</label>
-          <input type="time" [(ngModel)]="horaFin" class="form-control" />
-        </div>
+    <div class="row mt-3">
+      <div class="col-6">
+        <label>Hora Inicio</label>
+        <input type="time" [(ngModel)]="horaInicio" class="form-control" />
+      </div>
+      <div class="col-6">
+        <label>Hora Fin</label>
+        <input type="time" [(ngModel)]="horaFin" class="form-control" />
       </div>
     </div>
 
@@ -73,24 +69,10 @@
     </div>
   </div>
 
-  <!-- Formulario de Proyecto -->
   <div *ngIf="!isEventSelected">
     <div class="form-group">
-      <label>Nombre del Proyecto</label>
-      <input
-        [(ngModel)]="nombreProyecto"
-        class="form-control"
-        placeholder="Ingresa o edita el nombre del proyecto"
-      />
-    </div>
-
-    <div class="form-group">
       <label>Selecciona un Proyecto</label>
-      <select
-        [(ngModel)]="selectedProject"
-        class="form-control"
-        (change)="onProjectSelect()"
-      >
+      <select [(ngModel)]="selectedProject" class="form-control">
         <option value="">Selecciona un proyecto</option>
         <option *ngFor="let project of projects" [value]="project.id">
           {{ project.name }}
@@ -100,25 +82,16 @@
 
     <div class="row mt-3">
       <div class="col-6">
-        <div class="form-group">
-          <label>Hora Inicio</label>
-          <input
-            type="time"
-            [(ngModel)]="horaInicioProyecto"
-            class="form-control"
-          />
-        </div>
+        <label>Hora Inicio</label>
+        <input
+          type="time"
+          [(ngModel)]="horaInicioProyecto"
+          class="form-control"
+        />
       </div>
-
       <div class="col-6">
-        <div class="form-group">
-          <label>Hora Fin</label>
-          <input
-            type="time"
-            [(ngModel)]="horaFinProyecto"
-            class="form-control"
-          />
-        </div>
+        <label>Hora Fin</label>
+        <input type="time" [(ngModel)]="horaFinProyecto" class="form-control" />
       </div>
     </div>
 
