--- a/src/app/components/employees/employee-list/employee-list.component.html
+++ b/src/app/components/employees/employee-list/employee-list.component.html
@@ -4,66 +4,107 @@
   </header>
 
   <div class="employee-page">
-    <div class="button-search-container">
-      <button class="add-employee-button" (click)="openModal()">
-        Agregar Empleado
-      </button>
-      <div class="search-filters">
-        <input
-          type="text"
-          placeholder="Buscar por nombre..."
-          [(ngModel)]="searchTerm"
-        />
+    <div class="content-box">
+      <div class="button-search-container">
+        <button class="add-employee-button" (click)="openModal()">
+          Agregar Empleado
+        </button>
+        <div class="search-filters">
+          <input
+            type="text"
+            placeholder="Buscar por nombre..."
+            [(ngModel)]="searchTerm"
+          />
+        </div>
       </div>
-    </div>
 
-    <main>
-      <div class="table-container">
-        <table class="employee-table">
-          <thead>
-            <tr>
-              <th>DNI</th>
-              <th>Nombre</th>
-              <th>Tipo</th>
-              <th>Cargo</th>
-              <th>Área</th>
-              <th>Fecha de Ingreso</th>
-              <th>Acciones</th>
-            </tr>
-          </thead>
-          <tbody>
-            <ng-container *ngIf="employees$ | async as employees">
-              <ng-container
-                *ngFor="let employee of filteredEmployees(employees)"
-              >
-                <tr>
-                  <td>{{ employee.dni }}</td>
-                  <td>{{ employee.name }}</td>
-                  <td>{{ employee.workerType }}</td>
-                  <td>{{ employee.position }}</td>
-                  <td>{{ employee.area }}</td>
-                  <td>{{ employee.entryDate | date }}</td>
-                  <td>
-                    <button (click)="openEditModal(employee)">
-                      <img src="assets/icon-edit.png" alt="Editar" />
-                    </button>
-                    <button (click)="confirmDelete(employee.id)">
-                      <img src="assets/icon-trash.png" alt="Eliminar" />
-                    </button>
-                  </td>
-                </tr>
+      <main>
+        <div class="table-container">
+          <table class="employee-table">
+            <thead>
+              <tr>
+                <th>DNI</th>
+                <th>Nombre</th>
+                <th>Tipo</th>
+                <th>Cargo</th>
+                <th>Área</th>
+                <th>Fecha de Ingreso</th>
+                <th>Acciones</th>
+              </tr>
+            </thead>
+            <tbody>
+              <ng-container *ngIf="employees$ | async as employees">
+                <ng-container
+                  *ngFor="let employee of filteredEmployees(employees)"
+                >
+                  <tr>
+                    <td>{{ employee.dni }}</td>
+                    <td class="truncate">{{ employee.name }}</td>
+                    <td>{{ employee.workerType }}</td>
+                    <td>{{ employee.position }}</td>
+                    <td>{{ employee.area }}</td>
+                    <td>{{ employee.entryDate | date }}</td>
+                    <td class="actions-column">
+                      <!-- Botón Editar -->
+                      <button
+                        (click)="openEditModal(employee)"
+                        class="action-button"
+                      >
+                        <svg
+                          xmlns="http://www.w3.org/2000/svg"
+                          viewBox="0 0 24 24"
+                          fill="none"
+                          stroke="currentColor"
+                          width="24"
+                          height="24"
+                          stroke-width="2"
+                        >
+                          <path
+                            d="M4 20h4l10.5 -10.5a2.828 2.828 0 1 0 -4 -4l-10.5 10.5v4"
+                          ></path>
+                          <path d="M13.5 6.5l4 4"></path>
+                        </svg>
+                      </button>
+
+                      <!-- Botón Eliminar -->
+                      <button
+                        (click)="confirmDelete(employee.id)"
+                        class="action-button"
+                      >
+                        <svg
+                          xmlns="http://www.w3.org/2000/svg"
+                          viewBox="0 0 24 24"
+                          fill="none"
+                          stroke="currentColor"
+                          width="24"
+                          height="24"
+                          stroke-width="2"
+                        >
+                          <path d="M4 7l16 0"></path>
+                          <path d="M10 11l0 6"></path>
+                          <path d="M14 11l0 6"></path>
+                          <path
+                            d="M5 7l1 12a2 2 0 0 0 2 2h8a2 2 0 0 0 2 -2l1 -12"
+                          ></path>
+                          <path
+                            d="M9 7v-3a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v3"
+                          ></path>
+                        </svg>
+                      </button>
+                    </td>
+                  </tr>
+                </ng-container>
               </ng-container>
-            </ng-container>
-          </tbody>
-        </table>
-      </div>
-    </main>
+            </tbody>
+          </table>
+        </div>
+      </main>
+    </div>
 
     <app-employee-modal
       *ngIf="isModalOpen"
       [selectedEmployee]="selectedEmployee"
       (closeModal)="closeModal()"
-    >
-    </app-employee-modal>
+    ></app-employee-modal>
   </div>
 </div>
