--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,10 @@
+/* Estilos generales */
 html,
 body {
-  font-family: "Lato", sans-serif;
   margin: 0;
   padding: 0;
   height: 100%;
+  overflow: hidden; /* Evitar scroll inesperado */
   box-sizing: border-box;
-}
-
-* {
-  box-sizing: border-box; /* Asegura que el modelo de caja incluya el relleno y bordes */
+  font-family: "Arial", sans-serif;
 }
